--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,12 @@ plugins:
   - jekyll-feed
   - jekyll-seo-tag
 
+defaults:
+  - scope:
+      path: assets/images
+    values:
+      image: true
+
 exclude:
   - README.md
   - LICENSE
