--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: Julian Grosshauser
+author: Julian Grosshauser
 url: https://juliangrosshauser.com
 twitter_username: jgrosshauser
 github_username:  juliangrosshauser
